mern_k8s/CICD/kyverno-policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - ingress-nginx
                - envoy-gateway-system
                - istio-system
                - istio-ingress
                - kyverno
                - argocd
                - gatekeeper-system
                - cert-manager
      validate:
        message: "An explicit image tag is required."
        pattern:
          spec:
            containers:
              - image: "*:*"
    - name: disallow-latest
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - ingress-nginx
                - envoy-gateway-system
                - istio-system
                - istio-ingress
                - kyverno
                - argocd
                - gatekeeper-system
                - cert-manager
      validate:
        message: "Using ':latest' is not allowed; pin a version."
        pattern:
          spec:
            containers:
              - image: "!*:latest"
